--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <h1>OBJECT ARRAY RENDERING</h1>
+    <h2 class="text-dark text-center mt-3">OBJECT ARRAY RENDERING</h2>
 
     <div id="div" class="d-flex container p-3 justify-content-around flex-wrap mt-3">
     </div>
